<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ColeApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Bienvenido!</string>
    <string name="title_activity_opciones">Opciones</string>
    <string name="title_activity_matricula">Matricula</string>
    <string name="title_activity_ver_alumnos">VerAlumnos</string>
    <string name="title_activity_modificar_alumno">ModificarAlumno</string>
    <string name="user">Usuario</string>
    <string name="contra">Password</string>
    <string name="btnLogin">Entrar</string>
    <string name="btnSalir">Salir</string>
    <string name="btnMatirula">Matricular</string>
    <string name="btnVer">Ver</string>
    <string name="nom">Nombre</string>
    <string name="ape">Apellido</string>
    <string name="fechNac">Fecha Nacimiento</string>
    <string name="btnVolver">Volver</string>
    <string name="btnModificar">Modificar Datos</string>
    <string name="btnBuscar">Buscar</string>
    <string name="btnGrados">Ver Grados</string>
    <string name="title_activity_fer_grados">FerGrados</string>
    <string name="title_activity_ver_grados">VerGrados</string>
    <string name="title_activity_asignar_profesor">AsignarProfesor</string>
    <string name="sueldo">Sueldo</string>
    <string name="btnAsignar">Asignar Profesor</string>

</resources>
